Regenerate property migrations (#358)
* Slight tweaks to GeneratePropertiesMigratorConfiguration

- Correctly indent recipe options
- Use Files.writeString
- Overwrite existing files

* Regenerate properties for Spring Boot

* Rename SpringBootProperties_3_0_0 to SpringBootProperties_3_0

* Document flow deprecated property replacements